// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomePage tests should correctly render ComplaintsList with complaints 1`] = `
<div>
  <div>
    <div>
      Denuncia
    </div>
    <div>
      Tipo
    </div>
    <div>
      Fecha
    </div>
  </div>
  <div>
    <Buttons__Button
      as={[Function]}
      to="/add"
    >
      Denunciar
    </Buttons__Button>
    <div
      key="1"
    >
      <p>
        <Link
          replace={false}
          to="show/1"
        >
          Me robaron mi celular
        </Link>
      </p>
    </div>
    <div
      key="2"
    >
      <p>
        <Link
          replace={false}
          to="show/2"
        >
          Me robaron mi celular
        </Link>
      </p>
    </div>
    <div
      key="3"
    >
      <p>
        <Link
          replace={false}
          to="show/3"
        >
          Me robaron mi celular
        </Link>
      </p>
    </div>
  </div>
</div>
`;

exports[`HomePage tests should correctly render ComplaintsList with no complaints 1`] = `
<div>
  <div>
    <div>
      Denuncia
    </div>
    <div>
      Tipo
    </div>
    <div>
      Fecha
    </div>
  </div>
  <div>
    <Buttons__Button
      as={[Function]}
      to="/add"
    >
      Denunciar
    </Buttons__Button>
    <div>
      <span>
        No encontramos ninguna denuncia.
      </span>
    </div>
  </div>
</div>
`;

exports[`HomePage tests should correctly render LoadingPage when isLoading is true 1`] = `<LoadingPage />`;
